Cambio de nombres de propiedades
